added drug adding and getting